cdk.out.tmp/NishadInternsip-AvashyaVpcStack.template.json
{
 "Description": "Custom VPC Stack with 6 subnets across 2 AZs, IGW, 2 NAT Gateways, and S3 VPC Endpoint.",
 "Resources": {
  "NishadInternsipAvashyaVpc17C71B67": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/Resource"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet1Subnet3E4C267A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1/Subnet"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet1RouteTable0FD3B7C5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1/RouteTable"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet1RouteTableAssociation1FA1AA34": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcPublicSubnet1RouteTable0FD3B7C5"
    },
    "SubnetId": {
     "Ref": "NishadInternsipAvashyaVpcPublicSubnet1Subnet3E4C267A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet1DefaultRouteEA1CADE9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NishadInternsipAvashyaVpcIGWE3A78749"
    },
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcPublicSubnet1RouteTable0FD3B7C5"
    }
   },
   "DependsOn": [
    "NishadInternsipAvashyaVpcVPCGW0212198B"
   ],
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet1EIP3B989814": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1/EIP"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet1NATGateway6F5C55B0": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NishadInternsipAvashyaVpcPublicSubnet1EIP3B989814",
      "AllocationId"
     ]
    },
    "AvailabilityMode": "regional",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "DependsOn": [
    "NishadInternsipAvashyaVpcPublicSubnet1DefaultRouteEA1CADE9",
    "NishadInternsipAvashyaVpcPublicSubnet1RouteTableAssociation1FA1AA34"
   ],
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet1/NATGateway"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet2SubnetED5C4BA3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet2/Subnet"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet2RouteTable6933B948": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet2/RouteTable"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet2RouteTableAssociation5AB7D52E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcPublicSubnet2RouteTable6933B948"
    },
    "SubnetId": {
     "Ref": "NishadInternsipAvashyaVpcPublicSubnet2SubnetED5C4BA3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "NishadInternsipAvashyaVpcPublicSubnet2DefaultRouteFA67C9D0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NishadInternsipAvashyaVpcIGWE3A78749"
    },
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcPublicSubnet2RouteTable6933B948"
    }
   },
   "DependsOn": [
    "NishadInternsipAvashyaVpcVPCGW0212198B"
   ],
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "NishadInternsipAvashyaVpcPrivateAppSubnet1Subnet7C84DF34": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateApp"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet1/Subnet"
   }
  },
  "NishadInternsipAvashyaVpcPrivateAppSubnet1RouteTableE55A6295": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet1/RouteTable"
   }
  },
  "NishadInternsipAvashyaVpcPrivateAppSubnet1RouteTableAssociation2277C962": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet1RouteTableE55A6295"
    },
    "SubnetId": {
     "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet1Subnet7C84DF34"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet1/RouteTableAssociation"
   }
  },
  "NishadInternsipAvashyaVpcPrivateAppSubnet1DefaultRoute7AC9113D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NishadInternsipAvashyaVpcPublicSubnet1NATGateway6F5C55B0"
    },
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet1RouteTableE55A6295"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet1/DefaultRoute"
   }
  },
  "NishadInternsipAvashyaVpcPrivateAppSubnet2Subnet07A4580C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PrivateApp"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet2/Subnet"
   }
  },
  "NishadInternsipAvashyaVpcPrivateAppSubnet2RouteTable11A9E970": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet2/RouteTable"
   }
  },
  "NishadInternsipAvashyaVpcPrivateAppSubnet2RouteTableAssociation2D54BF19": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet2RouteTable11A9E970"
    },
    "SubnetId": {
     "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet2Subnet07A4580C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet2/RouteTableAssociation"
   }
  },
  "NishadInternsipAvashyaVpcPrivateAppSubnet2DefaultRoute92E04BA8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NishadInternsipAvashyaVpcPublicSubnet1NATGateway6F5C55B0"
    },
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet2RouteTable11A9E970"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/PrivateAppSubnet2/DefaultRoute"
   }
  },
  "NishadInternsipAvashyaVpcIsolatedDBSubnet1SubnetFA7ED432": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "IsolatedDB"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet1/Subnet"
   }
  },
  "NishadInternsipAvashyaVpcIsolatedDBSubnet1RouteTable4CF4F8DB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet1/RouteTable"
   }
  },
  "NishadInternsipAvashyaVpcIsolatedDBSubnet1RouteTableAssociation662234C7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcIsolatedDBSubnet1RouteTable4CF4F8DB"
    },
    "SubnetId": {
     "Ref": "NishadInternsipAvashyaVpcIsolatedDBSubnet1SubnetFA7ED432"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet1/RouteTableAssociation"
   }
  },
  "NishadInternsipAvashyaVpcIsolatedDBSubnet2Subnet9FE4C01B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "IsolatedDB"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet2/Subnet"
   }
  },
  "NishadInternsipAvashyaVpcIsolatedDBSubnet2RouteTableB1C3A056": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet2/RouteTable"
   }
  },
  "NishadInternsipAvashyaVpcIsolatedDBSubnet2RouteTableAssociationCE5643CB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NishadInternsipAvashyaVpcIsolatedDBSubnet2RouteTableB1C3A056"
    },
    "SubnetId": {
     "Ref": "NishadInternsipAvashyaVpcIsolatedDBSubnet2Subnet9FE4C01B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IsolatedDBSubnet2/RouteTableAssociation"
   }
  },
  "NishadInternsipAvashyaVpcIGWE3A78749": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/IGW"
   }
  },
  "NishadInternsipAvashyaVpcVPCGW0212198B": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "NishadInternsipAvashyaVpcIGWE3A78749"
    },
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/VPCGW"
   }
  },
  "NishadInternsipAvashyaVpcS3GatewayEndpoint3A2D022B": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet1RouteTableE55A6295"
     },
     {
      "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet2RouteTable11A9E970"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc"
     },
     {
      "Key": "Owner",
      "Value": "Nishad"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "NishadInternsipAvashyaVpc17C71B67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/NishadInternsip-AvashyaVpc/S3GatewayEndpoint/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOQQrCQAxFz+J+OmrVA4iIuJGhlW4ljRGjNVM6GUsR7y7Falf//8cjJLXpamHnE2hDgud7UnFpX7kC3g204USY2ldRo9lcpHAb42JZMeaxFNKejS3zUekIZUUjH9k6BI8Myl7+cl+2e9fHAXQHSi10xjX8BKXx8F6UGqG/8P1kWGtVwOuDRM1Aihq3cq49iw7qb75NRsHHBultXKdXL9OFnS/tbHILzEkTRflBNvvmB+Lm//MZAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "NishadInternsip-AvashyaVpcStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefNishadInternsipAvashyaVpc17C71B67284EDDCC": {
   "Value": {
    "Ref": "NishadInternsipAvashyaVpc17C71B67"
   },
   "Export": {
    "Name": "NishadInternsip-AvashyaVpcStack:ExportsOutputRefNishadInternsipAvashyaVpc17C71B67284EDDCC"
   }
  },
  "ExportsOutputRefNishadInternsipAvashyaVpcIsolatedDBSubnet1SubnetFA7ED43235A89E41": {
   "Value": {
    "Ref": "NishadInternsipAvashyaVpcIsolatedDBSubnet1SubnetFA7ED432"
   },
   "Export": {
    "Name": "NishadInternsip-AvashyaVpcStack:ExportsOutputRefNishadInternsipAvashyaVpcIsolatedDBSubnet1SubnetFA7ED43235A89E41"
   }
  },
  "ExportsOutputRefNishadInternsipAvashyaVpcIsolatedDBSubnet2Subnet9FE4C01BBA23859F": {
   "Value": {
    "Ref": "NishadInternsipAvashyaVpcIsolatedDBSubnet2Subnet9FE4C01B"
   },
   "Export": {
    "Name": "NishadInternsip-AvashyaVpcStack:ExportsOutputRefNishadInternsipAvashyaVpcIsolatedDBSubnet2Subnet9FE4C01BBA23859F"
   }
  },
  "ExportsOutputRefNishadInternsipAvashyaVpcPrivateAppSubnet1Subnet7C84DF34AAF10539": {
   "Value": {
    "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet1Subnet7C84DF34"
   },
   "Export": {
    "Name": "NishadInternsip-AvashyaVpcStack:ExportsOutputRefNishadInternsipAvashyaVpcPrivateAppSubnet1Subnet7C84DF34AAF10539"
   }
  },
  "ExportsOutputRefNishadInternsipAvashyaVpcPrivateAppSubnet2Subnet07A4580CA926733D": {
   "Value": {
    "Ref": "NishadInternsipAvashyaVpcPrivateAppSubnet2Subnet07A4580C"
   },
   "Export": {
    "Name": "NishadInternsip-AvashyaVpcStack:ExportsOutputRefNishadInternsipAvashyaVpcPrivateAppSubnet2Subnet07A4580CA926733D"
   }
  },
  "ExportsOutputRefNishadInternsipAvashyaVpcPublicSubnet1Subnet3E4C267AF6163158": {
   "Value": {
    "Ref": "NishadInternsipAvashyaVpcPublicSubnet1Subnet3E4C267A"
   },
   "Export": {
    "Name": "NishadInternsip-AvashyaVpcStack:ExportsOutputRefNishadInternsipAvashyaVpcPublicSubnet1Subnet3E4C267AF6163158"
   }
  },
  "ExportsOutputRefNishadInternsipAvashyaVpcPublicSubnet2SubnetED5C4BA3989E722F": {
   "Value": {
    "Ref": "NishadInternsipAvashyaVpcPublicSubnet2SubnetED5C4BA3"
   },
   "Export": {
    "Name": "NishadInternsip-AvashyaVpcStack:ExportsOutputRefNishadInternsipAvashyaVpcPublicSubnet2SubnetED5C4BA3989E722F"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
